# SEOS

./: .dockerignore  .env.template  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.es.md  README.md  REAME.md  ROADMAP.md  VISION.md  main.py  mcp_config.json  pyproject.toml  requirements.txt  test.java
SEOS-docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md  VISION.md
agents/: adr_agent.py  api_agent.py  audit_agent.py  base_agent.py  base_project_agent.py  chat_agent.py  create_agent.py  db_agent.py  deadcode_agent.py  deploy_agent.py  diagram_agent.py  example_agent.py  find_agent.py  gentest_agent.py  git_agent.py  github_agent.py  impact_agent.py  info_agent.py  install_agent.py  list_agent.py  load_agent.py  ls_agent.py  mcp_agent.py  metrics_agent.py  migrate_agent.py  mkdir_agent.py  ocr_agent.py  open_agent.py  projects_agent.py  read_agent.py  refactor_agent.py  reindex_agent.py  review_agent.py  rewrite_agent.py  role_agent.py  save_agent.py  sequence_agent.py  serve_agent.py  sprint_agent.py  summarize_agent.py  (+6 more)
analyzers/: cross_reference_analyzer.py  python_analyzer.py  universal_analyzer.py
api/: rest_app.py
batch_test/: sprint-37-Rescue-Prompt.md  sprint-37-Summary.md  sprint-37-TechnicalLog.md
config/: settings.py
core/: agent_context.py  banner.py  command_parser.py  exceptions.py  kernel.py  languages.py  logger.py  plugin_manager.py  project.py  workspace.py
documents/: pdf_reader.py
factories/: llm_factory.py
knowledge/: code_knowledge.py
logs/: audit.jsonl
managers/: agent_manager.py
(+243 files in other folders)
