[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seos"
version = "2.0.0"
description = "An AI-Orchestrated Platform for Software Engineering."
authors = [{ name = "Martin Moya Hernandez" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pypdf>=5.0.0",
    "reportlab>=4.2.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "PyGithub>=2.3.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "chromadb>=0.5.5",
    "textual>=0.50.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.1.0"]

[project.scripts]
seos = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "agents", "services", "skills", "analyzers", "providers", "processors", "managers", "api", "factories", "config", "knowledge", "ui"]
